[metadata]
name = testplates
author = Krzysztof Przybyła
author-email = krzysztof.h.przybyla@gmail.com
url = https://github.com/kprzybyla/testplates
description = Testing Templates
long-description = file: README.rst
platform = linux
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries

[options]
packages =
    testplates
    testplates.impl
package_dir =
    = src

[options.package_data]
resultful = py.typed

[flake8]
max-line-length = 99

[mypy]
strict = true
pretty = true
python_version = 3.8
mypy_path = src/stubs
plugins = src/plugins/mypy_plugin.py

[tool:pytest]
python_classes =

[coverage:run]
branch = true
omit = */__version__.py

[coverage:report]
fail_under = 90
exclude_lines =
    pragma: no cover
    @overload

[coverage:html]
directory = coverage
